##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##

[workspace]

resolver = "2"

members = [
    "engine/archived/aleph-ktx",
    "engine/archived/aleph-vk-format",
    "engine/crates/aleph-any",
    "engine/crates/aleph-arena-drop-list",
    "engine/crates/aleph-compile",
    "engine/crates/aleph-device-allocators",
    "engine/crates/aleph-dx12-agility-sdk",
    "engine/crates/aleph-dx12-alloc",
    "engine/crates/aleph-ecs",
    "engine/crates/aleph-ecs2",
    "engine/crates/aleph-engine",
    "engine/crates/aleph-engine-build",
    "engine/crates/aleph-frame-graph",
    "engine/crates/aleph-identity-hasher",
    "engine/crates/aleph-interfaces",
    "engine/crates/aleph-label",
    "engine/crates/aleph-math",
    "engine/crates/aleph-nstr",
    "engine/crates/aleph-pin-board",
    "engine/crates/aleph-pix",
    "engine/crates/aleph-pix-raw",
    "engine/crates/aleph-profile",
    "engine/crates/aleph-profile-procmacros",
    "engine/crates/aleph-quickjs",
    "engine/crates/aleph-quickjs-sys",
    "engine/crates/aleph-rhi-api",
    "engine/crates/aleph-rhi-dx12",
    "engine/crates/aleph-rhi-impl-utils",
    "engine/crates/aleph-rhi-loader",
    "engine/crates/aleph-rhi-loader-api",
    "engine/crates/aleph-rhi-null",
    "engine/crates/aleph-rhi-validation",
    "engine/crates/aleph-rhi-vulkan",
    "engine/crates/aleph-shader-db",
    "engine/crates/aleph-sys-info",
    "engine/crates/aleph-target",
    "engine/crates/aleph-target-build",
    "engine/crates/aleph-virtual-buffer",
    "engine/crates/aleph-vulkan-alloc",
    "engine/crates/aleph-windows",
    "engine/plugins/aleph-core",
    "engine/plugins/aleph-egui",
    "engine/plugins/aleph-headless",
    "engine/plugins/aleph-render",
    "engine/plugins/aleph-rhi",
    "engine/plugins/aleph-sdl2",
    "engine/tools/aleph",
    "game/aleph-test",
]

[workspace.package]
edition = "2021"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
repository = "https://github.com/nathanvoglsam/aleph"
license = "MIT"

[workspace.dependencies]

# Third Party Crates
allocator-api2 = "0.2"
android_logger = "0.14"
anyhow = "1"
ash = { version = "0.38", default-features = false, features = ["debug"] }
bitflags = "2"
bumpalo = { version = "3", features = ["boxed", "collections", "allocator-api2"] }
blink-alloc = { version = "0.3" }
bytemuck = "1"
byteorder = "1"
cargo_metadata = "0.18"
camino = "1"
cc = "1"
clap = "4"
cmake = "0.1"
console = "0.15"
crossbeam = "0.8"
ctrlc = "3"
dunce = "1"
egui = "0.28"
egui_demo_lib = "0.28"
embed-resource = "2"
env_logger = "0.11.0"
ignore = "0.4"
libc = "0.2"
libloading = "0.8"
log = { version = "0.4", features = ["release_max_level_debug"] }
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12"
raw-cpuid = "11"
raw-window-handle = "0.6"
rayon = "1"
rkyv = "0.7"
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
sdl2-sys = { version = "^0.37" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
superluminal-perf-sys = "0.3"
sysinfo = "0.30"
tera = "1"
thiserror = "1"
toml = "0.8"
tracy-client = "0.17"
ultraviolet = { version = "0.9", features = ["f64", "int"] }
wide = { version = "0.7" }
utf16_lit = "2"
zip = "2"

# Aleph Crates
aleph-any = { path = "./engine/crates/aleph-any", version = "0.1" }
aleph-arena-drop-list = { path = "./engine/crates/aleph-arena-drop-list", version = "0.1" }
aleph-compile = { path = "./engine/crates/aleph-compile", version = "1" }
aleph-device-allocators = { path = "./engine/crates/aleph-device-allocators", version = "0.1" }
aleph-dx12-agility-sdk = { path = "./engine/crates/aleph-dx12-agility-sdk", version = "1.711.3" }
aleph-dx12-alloc = { path = "./engine/crates/aleph-dx12-alloc", version = "0.1" }
aleph-ecs = { path = "./engine/crates/aleph-ecs", version = "0.1" }
aleph-engine = { path = "./engine/crates/aleph-engine", version = "0.1" }
aleph-engine-build = { path = "./engine/crates/aleph-engine-build", version = "0.1" }
aleph-frame-graph = { path = "./engine/crates/aleph-frame-graph", version = "0.1" }
aleph-identity-hasher = { path = "./engine/crates/aleph-identity-hasher", version = "1" }
aleph-interfaces = { path = "./engine/crates/aleph-interfaces", version = "0.1" }
aleph-label = { path = "./engine/crates/aleph-label", version = "1" }
aleph-math = { path = "./engine/crates/aleph-math", version = "0.1" }
aleph-luajit-sys = { path = "./engine/crates/aleph-luajit-sys", version = "0.1" }
aleph-nstr = { path = "./engine/crates/aleph-nstr", version = "0.1" }
aleph-pin-board = { path = "./engine/crates/aleph-pin-board", version = "0.1" }
aleph-pix = { path = "./engine/crates/aleph-pix", version = "0.1" }
aleph-pix-raw = { path = "./engine/crates/aleph-pix-raw", version = "0.1" }
aleph-profile = { path = "./engine/crates/aleph-profile", version = "0.1" }
aleph-profile-procmacros = { path = "./engine/crates/aleph-profile-procmacros", version = "0.1" }
aleph-quickjs = { path = "./engine/crates/aleph-quickjs", version = "0.1" }
aleph-quickjs-sys = { path = "./engine/crates/aleph-quickjs-sys", version = "0.1" }
aleph-rhi-api = { path = "./engine/crates/aleph-rhi-api", version = "0.1" }
aleph-rhi-dx12 = { path = "./engine/crates/aleph-rhi-dx12", version = "0.1" }
aleph-rhi-impl-utils = { path = "./engine/crates/aleph-rhi-impl-utils", version = "0.1" }
aleph-rhi-loader = { path = "./engine/crates/aleph-rhi-loader", version = "0.1" }
aleph-rhi-loader-api = { path = "./engine/crates/aleph-rhi-loader-api", version = "0.1" }
aleph-rhi-null = { path = "./engine/crates/aleph-rhi-null", version = "0.1" }
aleph-rhi-validation = { path = "./engine/crates/aleph-rhi-validation", version = "0.1" }
aleph-rhi-vulkan = { path = "./engine/crates/aleph-rhi-vulkan", version = "0.1" }
aleph-shader-db = { path = "./engine/crates/aleph-shader-db", version = "0.1" }
aleph-sys-info = { path = "./engine/crates/aleph-sys-info", version = "0.1" }
aleph-target = { path = "./engine/crates/aleph-target", version = "2" }
aleph-target-build = { path = "./engine/crates/aleph-target-build", version = "2" }
aleph-virtual-buffer = { path = "./engine/crates/aleph-virtual-buffer", version = "0.1" }
aleph-vulkan-alloc = { path = "./engine/crates/aleph-vulkan-alloc", version = "0.1" }
aleph-windows = { path = "./engine/crates/aleph-windows", version = "0.1" }

# Aleph Plugins
aleph-core = { path = "./engine/plugins/aleph-core", version = "0.1" }
aleph-egui = { path = "./engine/plugins/aleph-egui", version = "0.1" }
aleph-headless = { path = "./engine/plugins/aleph-headless", version = "0.1" }
aleph-render = { path = "./engine/plugins/aleph-render", version = "0.1" }
aleph-rhi = { path = "./engine/plugins/aleph-rhi", version = "0.1" }
aleph-sdl2 = { path = "./engine/plugins/aleph-sdl2", version = "0.1" }

# 'archived' Crates
aleph-ktx = { path = "./engine/archived/aleph-ktx", version = "0.1" }
aleph-vk-format = { path = "./engine/archived/aleph-vk-format", version = "1" }

# 'archived' Dependencies
num-integer = "0.1"
smartstring = "1"

# Compile all our third-party dependencies with optimizations even on debug builds. Some crates (mainly math crates)
# will bring our runtime performance to a crawl when built without optimizations, so we definitely want this enabled.
[profile.dev.package."*"]
opt-level = 3
