##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##

[workspace]

resolver = "2"

members = [
    "engine/aleph",
    "engine/aleph-any",
    "engine/aleph-arena-drop-list",
    "engine/aleph-atomic-borrow",
    "engine/aleph-compile",
    "engine/aleph-config",
    "engine/aleph-device-allocators",
    "engine/aleph-dx12-agility-sdk",
    "engine/aleph-dx12-alloc",
    "engine/aleph-ecs",
    "engine/aleph-egui",
    "engine/aleph-engine",
    "engine/aleph-engine-build",
    "engine/aleph-frame-graph",
    "engine/aleph-hibitset",
    "engine/aleph-identity-hasher",
    "engine/aleph-interfaces",
    "engine/aleph-ktx",
    "engine/aleph-label",
    "engine/aleph-math",
    "engine/aleph-nstr",
    "engine/aleph-object-system",
    "engine/aleph-pin-board",
    "engine/aleph-pix",
    "engine/aleph-pix-raw",
    "engine/aleph-profile",
    "engine/aleph-profile-procmacros",
    "engine/aleph-quickjs",
    "engine/aleph-quickjs-sys",
    "engine/aleph-render",
    "engine/aleph-renderer",
    "engine/aleph-rhi-api",
    "engine/aleph-rhi-dx12",
    "engine/aleph-rhi-impl-utils",
    "engine/aleph-rhi-loader",
    "engine/aleph-rhi-null",
    "engine/aleph-rhi-validation",
    "engine/aleph-rhi-vulkan",
    "engine/aleph-scheduler",
    "engine/aleph-shader-db",
    "engine/aleph-superluminal-sys",
    "engine/aleph-sys-info",
    "engine/aleph-target",
    "engine/aleph-target-build",
    "engine/aleph-typed-table",
    "engine/aleph-virtual-buffer",
    "engine/aleph-vk-format",
    "engine/aleph-vk2dfd",
    "engine/aleph-vulkan-alloc",
    "engine/aleph-windows",
    "game/aleph-test",
]

[workspace.package]
edition = "2021"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
repository = "https://github.com/nathanvoglsam/aleph"
license = "MIT"

[workspace.dependencies]

# Third Party Crates
allocator-api2 = "0.2"
android_logger = "0.14"
anyhow = "1"
ash = { version = "0.38", default-features = false, features = ["debug"] }
bitflags = "2"
bumpalo = { version = "3", features = ["boxed", "collections", "allocator-api2"] }
blink-alloc = { version = "0.3" }
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
cargo_metadata = "0.19"
camino = "1"
cc = "1"
clap = "4"
cmake = "0.1"
console = "0.15"
crossbeam = "0.8"
ctrlc = "3"
dunce = "1"
egui = "0.30"
egui_plot = "0.30"
embed-resource = "3"
env_logger = "0.11.0"
half = { version = "2", features = ["alloc", "bytemuck"] }
ignore = "0.4"
image = "0.25"
libc = "0.2"
libloading = "0.8"
log = { version = "0.4", features = ["release_max_level_debug"] }
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12"
raw-cpuid = "11"
raw-window-handle = "0.6"
rayon = "1"
rkyv = "0.8"
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
sdl2-sys = { version = "^0.37" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallbox = "0.8"
sysinfo = "0.33"
tera = "1"
thiserror = "2"
toml = "0.8"
tracy-client = "0.17"
ultraviolet = { version = "0.9", features = ["f64", "int"] }
wide = { version = "0.7" }
utf16_lit = "2"
uuid = { version = "1", features = ["v7"] }
zip = "2"
num-integer = "0.1"
arrayvec = "0.7"

windows-interface = "0.58.0"
windows.version = "0.58.0"
windows.features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_StructuredStorage",
    "Win32_Security",
    "implement",
]

# Aleph Crates
aleph-any = { path = "./engine/aleph-any", version = "0.1" }
aleph-arena-drop-list = { path = "./engine/aleph-arena-drop-list", version = "0.1" }
aleph-atomic-borrow = { path = "./engine/aleph-atomic-borrow", version = "0.1" }
aleph-compile = { path = "./engine/aleph-compile", version = "1" }
aleph-config = { path = "./engine/aleph-config", version = "0.1" }
aleph-device-allocators = { path = "./engine/aleph-device-allocators", version = "0.1" }
aleph-dx12-agility-sdk = { path = "./engine/aleph-dx12-agility-sdk", version = "1.711.3" }
aleph-dx12-alloc = { path = "./engine/aleph-dx12-alloc", version = "0.1" }
aleph-ecs = { path = "./engine/aleph-ecs", version = "0.1" }
aleph-engine = { path = "./engine/aleph-engine", version = "0.1" }
aleph-engine-build = { path = "./engine/aleph-engine-build", version = "0.1" }
aleph-frame-graph = { path = "./engine/aleph-frame-graph", version = "0.1" }
aleph-hibitset = { path = "./engine/aleph-hibitset", version = "0.1" }
aleph-identity-hasher = { path = "./engine/aleph-identity-hasher", version = "1" }
aleph-interfaces = { path = "./engine/aleph-interfaces", version = "0.1" }
aleph-ktx = { path = "./engine/aleph-ktx", version = "0.1" }
aleph-label = { path = "./engine/aleph-label", version = "1" }
aleph-math = { path = "./engine/aleph-math", version = "0.1" }
aleph-nstr = { path = "./engine/aleph-nstr", version = "0.1" }
aleph-object-system = { path = "./engine/aleph-object-system", version = "0.1" }
aleph-pin-board = { path = "./engine/aleph-pin-board", version = "0.1" }
aleph-pix = { path = "./engine/aleph-pix", version = "0.1" }
aleph-pix-raw = { path = "./engine/aleph-pix-raw", version = "0.1" }
aleph-profile = { path = "./engine/aleph-profile", version = "0.1" }
aleph-profile-procmacros = { path = "./engine/aleph-profile-procmacros", version = "0.1" }
aleph-quickjs = { path = "./engine/aleph-quickjs", version = "0.1" }
aleph-quickjs-sys = { path = "./engine/aleph-quickjs-sys", version = "0.1" }
aleph-renderer = { path = "./engine/aleph-renderer", version = "0.1" }
aleph-rhi-api = { path = "./engine/aleph-rhi-api", version = "0.1" }
aleph-rhi-dx12 = { path = "./engine/aleph-rhi-dx12", version = "0.1" }
aleph-rhi-impl-utils = { path = "./engine/aleph-rhi-impl-utils", version = "0.1" }
aleph-rhi-loader = { path = "./engine/aleph-rhi-loader", version = "0.1" }
aleph-rhi-null = { path = "./engine/aleph-rhi-null", version = "0.1" }
aleph-rhi-validation = { path = "./engine/aleph-rhi-validation", version = "0.1" }
aleph-rhi-vulkan = { path = "./engine/aleph-rhi-vulkan", version = "0.1" }
aleph-scheduler = { path = "./engine/aleph-scheduler", version = "0.1" }
aleph-shader-db = { path = "./engine/aleph-shader-db", version = "0.1" }
aleph-superluminal-sys = { path = "./engine/aleph-superluminal-sys", version = "0.3" }
aleph-sys-info = { path = "./engine/aleph-sys-info", version = "0.1" }
aleph-target = { path = "./engine/aleph-target", version = "2" }
aleph-target-build = { path = "./engine/aleph-target-build", version = "2" }
aleph-typed-table = { path = "./engine/aleph-typed-table", version = "0.1" }
aleph-virtual-buffer = { path = "./engine/aleph-virtual-buffer", version = "0.1" }
aleph-vk-format = { path = "./engine/aleph-vk-format", version = "1" }
aleph-vk2dfd = { path = "./engine/aleph-vk2dfd", version = "0.1" }
aleph-vulkan-alloc = { path = "./engine/aleph-vulkan-alloc", version = "0.1" }
aleph-windows = { path = "./engine/aleph-windows", version = "0.1" }

# Aleph Plugins
aleph-egui = { path = "./engine/aleph-egui", version = "0.1" }
aleph-render = { path = "./engine/aleph-render", version = "0.1" }

# Compile all our third-party dependencies with optimizations even on debug builds. Some crates (mainly math crates)
# will bring our runtime performance to a crawl when built without optimizations, so we definitely want this enabled.
[profile.dev.package."*"]
opt-level = 3
