##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-engine"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
edition = "2018"

[dependencies]
erupt = "0.6"
sdl2 = "0.34"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.7"

[build-dependencies]
cmake = "0.1"
aleph-target = { path = "../aleph-target", version = "1" }
aleph-compile = { path = "../aleph-compile", version = "1" }

