##
##
## This file is a part of Aleph
##
## <ALEPH_REPO_REPLACE>
##
## <ALEPH_LICENSE_REPLACE>
##


[package]
name = "aleph-engine"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "A Rust and Vulkan powered 3D game engine"
license = "<ALEPH_LICENSE_NAME_REPLACE>"
repository = "<ALEPH_REPO_REPLACE>"
documentation = "https://docs.rs/aleph-engine/"
readme = "README.md"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition = "2018"

[badges]
azure-devops = { project = "<ALEPH_CI_PROJECT_REPLACE>", pipeline = "<ALEPH_CI_PIPELINE_REPLACE>", build = "1" }

[dependencies]
sdl2 = { version = "0.34", features = ["raw-window-handle"] }
log = { version = "0.4", features = ["release_max_level_info"] }
rayon = "1.3"
crossbeam = "0.7"
smallbox = "0.8"
once_cell = "1.3"
raw-cpuid = "8.1"
num_cpus = "1.13"
parking_lot = "0.10"
libloading = "0.6"
raw-window-handle = "0.3"
console = "0.11"
imgui = "0.4"
clap = "2.33"
palette = "0.5"
gltf = {version = "0.15", features = ["utils", "names"]}
spirv-reflect = "0.2"
aleph-app-info = { path = "../aleph-app-info", version = "0.1" }
aleph-vulkan = { path = "../aleph-vulkan", version = "0.1" }
aleph-target-crate = { path = "../aleph-target-crate", version = "1" }
aleph-vma-sys = { path = "../aleph-vma-sys", version = "1" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.7"

[build-dependencies]
cmake = "0.1"
aleph-target = { path = "../aleph-target", version = "1" }
aleph-compile = { path = "../aleph-compile", version = "1" }
aleph-math = { path = "../aleph-math", version = "0.1" }

