##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-engine"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "A Rust and Vulkan powered 3D game engine"
license = "MIT"
repository = "https://github.com/nathanvoglsam/aleph"
documentation = "https://docs.rs/aleph-engine/"
readme = "README.md"
keywords = ["engine", "graphics", "vulkan", "game"]
categories = ["game-engines"]
edition = "2021"

[badges]
azure-devops = { project = "nathanvoglsam420/Aleph", pipeline = "nathanvoglsam.aleph", build = "1" }

[features]
default = ["platform_sdl2"]
platform_sdl2 = ["aleph-sdl2"]

[dependencies]
aleph-plugin-registry = { path = "../aleph-plugin-registry", version = "0.1" }
aleph-log = { path = "../aleph-log", version = "1" }
aleph-logger = { path = "../aleph-logger", version = "0.1" }
aleph-target = { path = "../aleph-target", version = "2" }
aleph-sys-info = { path = "../aleph-sys-info", version = "0.1" }

aleph-core = { path = "../../plugins/aleph-core", version = "0.1" }
aleph-egui = { path = "../../plugins/aleph-egui", version = "0.1" }
aleph-sdl2 = { path = "../../plugins/aleph-sdl2", version = "0.1", optional = true }
aleph-headless = { path = "../../plugins/aleph-headless", version = "0.1" }

raw-cpuid = "9"
once_cell = "1"
num_cpus = "1"

[target.'cfg(target_os = "windows")'.dependencies]
aleph-gpu-dx12 = { path = "../../plugins/aleph-gpu-dx12", version = "0.1" }
aleph-render = { path = "../../plugins/aleph-render", version = "0.1" }
aleph-windows = { path = "../aleph-windows", version = "0.1" }

utf16_lit = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
