##
##
## This file is a part of Aleph
##
## https://github.com/nathanvoglsam/aleph
##
## MIT License
##
## Copyright (c) 2020 Aleph Engine
##
## Permission is hereby granted, free of charge, to any person obtaining a copy
## of this software and associated documentation files (the "Software"), to deal
## in the Software without restriction, including without limitation the rights
## to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
## copies of the Software, and to permit persons to whom the Software is
## furnished to do so, subject to the following conditions:
##
## The above copyright notice and this permission notice shall be included in all
## copies or substantial portions of the Software.
##
## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
## FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
## AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
## LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
## OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
## SOFTWARE.
##


[package]
name = "aleph-gpu"
version = "0.1.0"
authors = ["Nathan Voglsam <nathanvoglsam420@gmail.com>"]
description = "The aleph-engine GPU interface"
license = "MIT"
repository = "https://github.com/nathanvoglsam/aleph"
documentation = "https://docs.rs/aleph-gpu/"
readme = "README.md"
## keywords = ["engine", "graphics", "vulkan", "game"]
## categories = ["game-engines"]
edition = "2021"

[badges]
azure-devops = { project = "nathanvoglsam420/Aleph", pipeline = "nathanvoglsam.aleph", build = "1" }

[target.'cfg(target_os = "windows")'.dependencies]
aleph-dx12 = { path = "../aleph-dx12", version = "0.1" }
aleph-dx12-alloc = { path = "../aleph-dx12-alloc", version = "0.1" }
aleph-pix = { path = "../aleph-pix", version = "0.1" }

[dependencies]
aleph-vulkan-core = { path = "../aleph-vulkan-core", version = "0.1" }
aleph-vulkan-alloc = { path = "../aleph-vulkan-alloc", version = "0.1" }
aleph-interfaces = { path = "../aleph-interfaces", version = "0.1" }
aleph-log = { path = "../aleph-log", version = "1" }
cstr = "0.2"
once_cell = "1"
crossbeam = "0.8"
bitflags = "1.3"
ultraviolet = {version = "0.8", features = ["f64"] }
